[gd_scene load_steps=6 format=2]

[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/input.gd" type="Script" id=2]
[ext_resource path="res://scenes/TodoList.gd" type="Script" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
use_filter = true
font_data = ExtResource( 1 )

[node name="Tasks" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1073.0
margin_bottom = 2333.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1066.0
margin_bottom = 291.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "

Tasks"
align = 1
valign = 1

[node name="TodoList" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 295.0
margin_right = 1066.0
margin_bottom = 2262.0
size_flags_vertical = 3

[node name="Input" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 2266.0
margin_right = 1066.0
margin_bottom = 2326.0
size_flags_vertical = 11
size_flags_stretch_ratio = 0.03
script = ExtResource( 2 )

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/Input"]
margin_right = 1011.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Aggiungi una task.."

[node name="Button" type="Button" parent="VBoxContainer/Input"]
margin_left = 1015.0
margin_right = 1066.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[connection signal="new_todo" from="VBoxContainer/Input" to="." method="add_todo"]
[connection signal="pressed" from="VBoxContainer/Input/Button" to="VBoxContainer/Input" method="_on_Button_pressed"]
